--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="six">
       <img src="img/f1.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
-       <audio id="au" autoplay="autoplay" loop="loop" preload="auto"></audio>
+       <audio src="img/bgm01.mp3" autoplay="autoplay" loop="loop" preload="auto"></audio>
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">希望老爸身体健康，天天开心，永远爱您哦！:)</h5>
